--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,28 +25,28 @@ body {
   width: 100%;
 }
 
-.box .container .accordion .accordionColumn {
+.box .container .accordion .accordionItem {
   margin: 0 0 15px 0;
   overflow: hidden;
   transition: height .4s ease-in-out;
   border-radius: 8px;
 }
 
-.box .container .accordion .accordionColumn:nth-child(3n+3) .title {
+.box .container .accordion .accordionItem:nth-child(3n+3) .title {
   background-color: #0ACF83;
 }
 
-.box .container .accordion .accordionColumn:nth-child(3n+2) .title {
+.box .container .accordion .accordionItem:nth-child(3n+2) .title {
   background-color: #A334FB;
 }
 
-.box .container .accordion .accordionColumn.open .title::before {
+.box .container .accordion .accordionItem.open .title::before {
   background: url(../img/minus-icon.png);
   height: 2px;
   top: calc(50% - 1px);
 }
 
-.box .container .accordion .accordionColumn .title {
+.box .container .accordion .accordionItem .title {
   font-weight: 500;
   font-size: 24px;
   line-height: 30px;
@@ -57,7 +57,7 @@ body {
   cursor: pointer;
 }
 
-.box .container .accordion .accordionColumn .title::before {
+.box .container .accordion .accordionItem .title::before {
   content: "";
   position: absolute;
   right: 30px;
@@ -68,7 +68,7 @@ body {
   transition: all 0.2s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
-.box .container .accordion .accordionColumn .desc {
+.box .container .accordion .accordionItem .desc {
   font-weight: 300;
   font-size: 18px;
   line-height: 28px;
@@ -78,7 +78,7 @@ body {
   padding: 20px 30px;
 }
 
-.box .container .accordion .accordionColumn .desc a {
+.box .container .accordion .accordionItem .desc a {
   font-weight: 600;
   font-size: 16px;
   line-height: 26px;
@@ -86,13 +86,13 @@ body {
   text-decoration: underline;
 }
 
-.box .container .accordion .accordionColumn .desc ul {
+.box .container .accordion .accordionItem .desc ul {
   width: 100%;
   margin: 15px 0 0 0;
   padding: 0 0 0 20px;
 }
 
-.box .container .accordion .accordionColumn .desc ul li {
+.box .container .accordion .accordionItem .desc ul li {
   font-weight: 300;
   font-size: 16px;
   line-height: 26px;
@@ -100,15 +100,15 @@ body {
   padding: 0 0 0 20px;
 }
 
-.box .container .accordion .accordionColumn .desc ul li:nth-child(3n+3)::before {
+.box .container .accordion .accordionItem .desc ul li:nth-child(3n+3)::before {
   background-color: #0ACF83;
 }
 
-.box .container .accordion .accordionColumn .desc ul li:nth-child(3n+2)::before {
+.box .container .accordion .accordionItem .desc ul li:nth-child(3n+2)::before {
   background-color: #A334FB;
 }
 
-.box .container .accordion .accordionColumn .desc ul li::before {
+.box .container .accordion .accordionItem .desc ul li::before {
   content: "";
   background-color: #474DFF;
   width: 5px;
@@ -147,22 +147,22 @@ body {
   .box .container h1 {
     font-size: 40px;
   }
-  .box .container .accordion .accordionColumn {
+  .box .container .accordion .accordionItem {
     margin: 0 0 10px 0;
   }
-  .box .container .accordion .accordionColumn .title {
+  .box .container .accordion .accordionItem .title {
     font-size: 20px;
     line-height: 26px;
     padding: 15px 65px 15px 25px;
   }
-  .box .container .accordion .accordionColumn .title::before {
+  .box .container .accordion .accordionItem .title::before {
     width: 20px;
     height: 20px;
     background-size: contain;
     right: 25px;
     top: calc(50% - 10px);
   }
-  .box .container .accordion .accordionColumn .desc {
+  .box .container .accordion .accordionItem .desc {
     font-size: 16px;
     line-height: 26px;
     padding: 15px 25px;
@@ -179,38 +179,38 @@ body {
   .box .container h1 {
     font-size: 30px;
   }
-  .box .container .accordion .accordionColumn {
+  .box .container .accordion .accordionItem {
     margin: 0 0 5px 0;
   }
-  .box .container .accordion .accordionColumn.open .title::before {
+  .box .container .accordion .accordionItem.open .title::before {
     height: 1px;
     top: calc(50% - 0.5px);
   }
-  .box .container .accordion .accordionColumn .title {
+  .box .container .accordion .accordionItem .title {
     font-size: 18px;
     line-height: 24px;
     padding: 15px 50px 15px 20px;
   }
-  .box .container .accordion .accordionColumn .title::before {
+  .box .container .accordion .accordionItem .title::before {
     width: 15px;
     height: 15px;
     background-size: contain;
     right: 20px;
     top: calc(50% - 7.5px);
   }
-  .box .container .accordion .accordionColumn .desc {
+  .box .container .accordion .accordionItem .desc {
     font-size: 14px;
     line-height: 24px;
     padding: 15px 20px;
   }
-  .box .container .accordion .accordionColumn .desc a {
+  .box .container .accordion .accordionItem .desc a {
     font-size: 14px;
     line-height: 24px;
   }
-  .box .container .accordion .accordionColumn .desc ul {
+  .box .container .accordion .accordionItem .desc ul {
     padding: 0 0 0 10px;
   }
-  .box .container .accordion .accordionColumn .desc ul li {
+  .box .container .accordion .accordionItem .desc ul li {
     font-size: 14px;
     line-height: 24px;
   }
